Embed Ajax into search input

--- a/app/index.html
+++ b/app/index.html
@@ -28,9 +28,9 @@
     <nav id="myNavmenu" class="navmenu navmenu-inverse navmenu-fixed-left offcanvas" role="navigation">
       <a class="navmenu-brand" href="#">Local Guide</a>
       <div class="input-group">
-        <input type="text" class="form-control" placeholder="Location filter">
+        <input type="text" class="form-control" data-bind="value:SearchVal" placeholder="restaurant">
         <span class="input-group-btn">
-          <button class="btn btn-default" type="button">
+          <button class="btn btn-default" data-bind="click: Update" type="button">
             <span class="glyphicon glyphicon-filter" aria-hidden="true"></span>
           </button>
         </span>
