Add basic list view and markers

--- a/app/index.html
+++ b/app/index.html
@@ -30,7 +30,7 @@
       <div class="input-group">
         <input type="text" class="form-control" data-bind="value:SearchVal" placeholder="restaurant">
         <span class="input-group-btn">
-          <button class="btn btn-default" data-bind="click: Update" type="button">
+          <button class="btn btn-default" type="button">
             <span class="glyphicon glyphicon-filter" aria-hidden="true"></span>
           </button>
         </span>
