--- a/app/index.html
+++ b/app/index.html
@@ -28,7 +28,7 @@
     <nav id="myNavmenu" class="navmenu navmenu-inverse navmenu-fixed-left offcanvas" role="navigation">
       <a class="navmenu-brand" href="#">Local Museum Guide</a>
       <div class="input-group">
-        <input type="text" class="form-control" data-bind="value:filter, valueUpdate: 'afterkeydown'" placeholder="Keyword">
+        <input type="text" class="form-control" data-bind="textInput:filter" placeholder="Keyword">
         <span class="input-group-btn">
           <button class="btn btn-default" type="button">
             <span class="glyphicon glyphicon-filter" aria-hidden="true"></span>
