--- a/app/index.html
+++ b/app/index.html
@@ -23,7 +23,7 @@
   </head>
   <body>
     <!--[if lt IE 10]>
-      <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+      <p class="browser-upgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
     <nav id="myNavmenu" class="navmenu navmenu-inverse navmenu-fixed-left offcanvas" role="navigation">
       <a class="navmenu-brand" href="#">Local Museum Guide</a>
@@ -46,7 +46,7 @@
         <span class="icon-bar"></span>
       </button>
     </div>
-    <main id="map_canvas"></main>
+    <main id="map-canvas"></main>
 
 
     <!-- Google Analytics-->
